--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -10,27 +10,25 @@ html {
   // This define what 1rem  10px
   font-size: 62.5%;
 
-  @include respond(phone) {
-
-    font-size: 50%;
+  @include respond(tab-land) {
+    // 1rem = 9px, 9/16 = 56.25%
+    font-size: 56.25%;
   }
 
   @include respond(tab-port) {
-    // 1rem = 9px
-    font-size: 60%;
-  }
-
-  @include respond(tab-land) {
-    // 1rem = 8px, 8/16 = 50%
-    font-size: 70%;
+    width: 100% !important;
   }
 
   @include respond(big-desktop) {
-    font-size: 80%;
+    font-size: 68.75%;
   }
 }
 
 body {
   padding: 3rem;
   box-sizing: border-box;
+
+  @include respond(tab-port) {
+    padding: 0;
+  }
 }
