--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -28,6 +28,11 @@ body {
     animation-delay: 3s;
     animation-iteration-count: 3;
     */
+
+    @include respond(phone) {
+      letter-spacing: 2.5rem;
+      font-size: 3rem;
+    }
   }
 
   &--sub {
@@ -37,10 +42,15 @@ body {
     letter-spacing: 1.7rem;
 
     animation: moveInRight 2s ease-out;
+
+    @include respond(phone) {
+      letter-spacing: 1rem;
+    }
   }
 }
 
 .heading-secondary {
+  padding: 2rem;
   font-size: 3.5rem;
   text-transform: uppercase;
   font-weight: 700;
@@ -52,6 +62,14 @@ body {
   color: transparent;
 
   transition: all, .2s;
+
+  @include respond(tab-port) {
+    font-size: 3rem;
+  }
+
+  @include respond(phone) {
+    font-size: 2.5rem;
+  }
 
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
