--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -8,6 +8,10 @@
   box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
   transition: transform .2s;
 
+  @include respond(tab-port) {
+    padding: 2rem;
+  }
+
   &:hover {
     transform: translateY(-1.5rem) scale(1.03);
     box-shadow: 0 5rem 10rem rgba($color-black, .15);
@@ -21,5 +25,9 @@
     -webkit-background-clip: text;
     color: transparent;
     font-size: 6rem;
+
+    @include respond(tab-port) {
+      margin-bottom: 0;
+    }
   }
 }
