--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,9 +4,17 @@
   background-color: $color-grey-dark-3;
   font-size: 1.5rem;
 
+  @include respond(tab-port) {
+    padding: 8rem 0;
+  }
+
   &__logo-box {
     margin-bottom: 8rem;
     text-align: center;
+
+    @include respond(phone) {
+      margin-bottom: 6rem;
+    }
   }
 
   &__logo {
@@ -18,6 +26,11 @@
     border-top: 1px solid $color-grey-dark-2;
     padding-top: 2rem;
     display: inline-block;
+
+    @include respond(tab-port) {
+      width: 100%;
+      text-align: center;
+    }
   }
 
   &__list {
@@ -57,5 +70,10 @@
     width: 80%;
     border-top: 1px solid $color-grey-dark-2;
     padding-top: 2rem;
+
+    @include respond(tab-port) {
+      float: none;
+      width: 100%;
+    }
   }
 }
