--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -16,6 +16,11 @@
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 
+  @include respond(phone) {
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+  }
+
   &__logo-box {
     position: absolute;
     top: 4rem;
@@ -24,6 +29,10 @@
 
   &__logo {
     height: 3.5rem;
+
+    @include respond(phone) {
+      height: 3rem;
+    }
   }
 
   &__text-box {
@@ -33,5 +42,9 @@
     transform: translate(-50%, -50%);
 
     text-align: center;
+
+    @include respond(tab-port) {
+      top: 50%;
+    }
   }
 }
