--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -3,6 +3,10 @@
   padding: 25rem 0;
 
   background-color: $color-gray-light-1;
+
+  @include respond(phone) {
+    padding: 20rem 0;
+  }
 }
 
 .section-features {
@@ -20,6 +24,10 @@
 
   transform: skewY(-7deg);
 
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
+
   // Turn direct child back to normal position
   & > * {
     transform: skewY(7deg);
@@ -31,20 +39,31 @@
   padding: 25rem 0 15rem 0;
 
   background-color: $color-gray-light-1;
+
+  @include respond(tab-port) {
+    padding: 20rem 0 10rem 0;
+  }
 }
 
 .section-stories {
   position: relative;
   padding: 15rem 0;
+
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
 }
 
 .section-book {
   padding: 15rem 0;
   background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
 }
 
 .book {
-  height: 50rem;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
 
@@ -55,8 +74,31 @@
     url("../img/nat-10.jpg");
   background-size: cover;
 
+  @include respond(tab-land) {
+    background-image: linear-gradient(105deg,
+    rgba($color-white, .9) 0%,
+    rgba($color-white, .9) 65%,
+    transparent 65%),
+    url("../img/nat-10.jpg");
+  }
+
+  @include respond(tab-port) {
+    background-image: linear-gradient(to right,
+    rgba($color-white, .9) 0%,
+    rgba($color-white, .9) 100%),
+    url("../img/nat-10.jpg");
+  }
+
   &__form {
     width: 50%;
     padding:6rem;
+
+    @include respond(tab-land) {
+      width: 65%;
+    }
+
+    @include respond(tab-port) {
+      width: 100%;
+    }
   }
 }
